header+menu ready

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,7 +13,15 @@
 *{
     box-sizing: border-box;
 }
-
+body{
+    position: relative;
+}
+.overflow{
+    overflow: hidden;
+}
+img {
+    width: 100%;
+}
 .container{
     margin: 0 auto;
     max-width: 1720px;
@@ -27,6 +35,7 @@
     line-height: 96px;
     border: 1px solid $black;
 }
+
 
 //Блоки
 @import "blocks/header";
