--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -3,11 +3,13 @@
     top:0;
     left:0;
     right: 0;
+    background-color: $white;
     &__wrapper{
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding-top: 10px;
+        padding-bottom: 10px;
     }
     &__logo{
         max-width: 190px;
