--- a/src/sass/blocks/_menu-burger.scss
+++ b/src/sass/blocks/_menu-burger.scss
@@ -1,6 +1,6 @@
 .menu{
     position: fixed;
-    top:-100%;
+    top:-150%;
     left:0;
     right: 0;
     bottom: 0;
@@ -8,6 +8,7 @@
     height: 100vh;
     transition: all 0.6s;
     z-index: -10;
+    z-index: 10;
     &__active{
         top:0;
         z-index: 10;
