--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,5 +1,4 @@
 .about{
-    background: url('../img/about/about-background.png') left /65% no-repeat;
     display: block;
     padding-top: 70px;
     &_two{
@@ -18,7 +17,10 @@
     &__wrapper{
         display: flex;
         justify-content: space-between;
+        max-width: 1720px;
         align-items: center;
+        height: 100%;
+        margin: 0 auto;
     }
     &__title{
         font-family: 'Neue Machina';
@@ -41,10 +43,11 @@
     &__arrow{
         position: absolute;
         bottom: 126px;
-        right: 0;
+        right: 100px;
         width: 66px;
         height: 88px;
         cursor: pointer;
+        z-index: 5;
         &:hover{
             svg{
                 fill:#960018;
@@ -57,4 +60,22 @@
             transition: all 0.3s;
         }
     }
+    .about__swiper{
+        max-height: 100vh;
+        overflow: hidden;
+        max-width: 100vw;
+    }
+    .swiper-slide{
+        height: 100%;
+    }
+    &_one{
+        background: url('../img/about/about-background.png') left /65% no-repeat;
+    }
+    &_two{
+        background: url('../img/about/about-bg2.png') left /65% no-repeat;
+    }
+    &_three{
+        background: url('../img/about/about-bg3.png') left /65% no-repeat;
+    }
+    
 }
