--- a/src/sass/blocks/_partners.scss
+++ b/src/sass/blocks/_partners.scss
@@ -29,4 +29,8 @@
         justify-content: space-between;
         align-items: center;
     }
+
+    &__adaptive{
+        display: none;
+    }
 }
