--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -57,4 +57,8 @@ img {
 @import "blocks/team";
 @import "blocks/footer";
 //Адаптив
-@import "media/media";
+@import "media/media-1400px";
+@import "media/media-1024px";
+@import "media/media-768px";
+@import "media/media-480px";
+@import "media/media-360px";
