adaptive 768px ready

--- a/src/sass/media/_media-1024px.scss
+++ b/src/sass/media/_media-1024px.scss
@@ -207,7 +207,7 @@
         .alf, .air{
             max-width:340px;
         }
-        .mvidio{
+        .mvideo{
             max-width: 170px;
         }
         .ali{
