adaptive 480px ready + mobile-accordion

--- a/src/sass/blocks/_services.scss
+++ b/src/sass/blocks/_services.scss
@@ -1,6 +1,9 @@
 .services{
     background-color: $white;
     display: block;
+    &__block-mobile{
+        display: none;
+    }
     &__block{
         display: flex;
         flex-direction: column;
