adaptive 360px ready

--- a/src/sass/media/_media-480px.scss
+++ b/src/sass/media/_media-480px.scss
@@ -27,7 +27,7 @@
             font-size: 45px;
             line-height: 43px;
             margin-bottom: 30px;
-            max-width: 100%px;
+            max-width: 100%;
         }
         &__arrow{
             max-width: 35px;
