--- a/src/sass/media/_media-1400px.scss
+++ b/src/sass/media/_media-1400px.scss
@@ -58,7 +58,7 @@
     }
 
     .benefits {
-        padding-top:60px;
+        padding-top:80px;
         &__title{
             font-size: 80px;
         }
@@ -192,7 +192,7 @@
         &__arrow{
             max-width: 55px;
             max-height: 67px;
-            bottom: 25px;
+            bottom: 5%;
             right: 40px;
             svg{
                 max-width: 55px;
@@ -236,7 +236,7 @@
         &__arrow{
             max-width: 55px;
             max-height: 67px;
-            bottom: 25px;
+            bottom: 7%;
             left:30%;
             svg{
                 max-width: 55px;
