--- a/src/sass/media/_media-360px.scss
+++ b/src/sass/media/_media-360px.scss
@@ -343,9 +343,18 @@
         }
         &__wrapper{
             max-width: 100%;
+            overflow: hidden;
             flex-direction: column;
             align-items: flex-start;
             justify-content: space-between;
+        }
+        .swiper-wrapper{
+            max-width: 100%;
+            
+        }
+        .swiper-slide{
+            max-width: 100%;
+            overflow: hiden;
         }
         &__text{
             max-width: 100%;
