--- a/src/sass/blocks/_main.scss
+++ b/src/sass/blocks/_main.scss
@@ -1,5 +1,5 @@
 .main{
-    background: url('../img/main/main-background.png') center center /cover no-repeat;
+    background: url('../img/main/main-background.webp') center center /cover no-repeat;
     display: block;
     &__wrapper{
         display: flex;
