--- a/src/sass/media/_media-360px.scss
+++ b/src/sass/media/_media-360px.scss
@@ -1,7 +1,7 @@
-@media (max-width:360px) {
+@media (max-width:375px) {
     .container{
         max-width: 100%;
-        padding: 0 20px;
+        padding: 0 15px;
     }
     .header{
         &__wrapper{
@@ -20,7 +20,7 @@
     }
 
     .main{
-        
+        background-position: 60%;
         &__title{
             font-size: 37px;
             line-height: 39px;
@@ -156,8 +156,8 @@
             align-self: flex-start;
         }
         &__item{
-            font-size: 40px;
-            line-height: 39px;
+            font-size: 30px;
+            line-height: 34px;
             &:not(:last-child){
                 margin-bottom: 20px;
             }
@@ -174,8 +174,9 @@
     }
 
     .about{
-        padding-top: 0;
+        
         &__wrapper{
+            padding: 0 15px;
             max-width: 320px;
             height: 100vh;
             flex-direction: column;
@@ -214,13 +215,13 @@
         }
 
         &_one{
-            background: url('../img/about/about-background.png') top center /100% 60% no-repeat;
+            background: url('../img/about/about-background.webp') top center /100% 60% no-repeat;
         }
         &_two{
-            background: url('../img/about/about-bg2.png') top center /100% 60%  no-repeat;
+            background: url('../img/about/about-bg2.webp') top center /100% 60%  no-repeat;
         }
         &_three{
-            background: url('../img/about/about-bg3.png') top center /100% 60%  no-repeat;
+            background: url('../img/about/about-bg3.webp') top center /100% 60%  no-repeat;
         }
     }
 
@@ -275,11 +276,14 @@
     }
 
     .certificates {
-        padding-top: 10px;
+        padding-top: 40px;
         &__title{
             font-size: 37px;
             line-height: 39px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
+        }
+        &__block{
+            justify-content: flex-start;
         }
         &__wrapper{
             display: flex;
@@ -308,7 +312,7 @@
             }
         }
         &__img{
-            max-width: 154px;
+            max-width: 100px;
             max-height: 220px;
             margin: 0 auto;
             margin-top: 15px;
@@ -316,8 +320,8 @@
         &__arrow{
             max-width: 25px;
             max-height: 30px;
-            bottom: 5px;
-            right: 25%;
+            bottom: 35px;
+            right: 32%;
             svg{
                 max-width: 25px;
                 max-height: 30px;
@@ -337,7 +341,7 @@
         }
         &__img-mobile{
             display: block;
-            max-width: 320px;
+            max-width: 200px;
             max-height: 290px;
             margin-bottom: 10px;
         }
@@ -379,7 +383,7 @@
         &__arrow{
             max-width: 25px;
             max-height: 30px;
-            bottom: 35%;
+            bottom: 41%;
             left:auto;
             right: 1%;
             svg{
